must commit or die

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -10,6 +10,7 @@
         "UPDATE",
         "ADD",
         "class",
-        "UISpecialFrames"
+        "UISpecialFrames",
+        "ChatFrame_AddChannel"
     ]
 }
