--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -11,6 +11,7 @@
         "ADD",
         "class",
         "UISpecialFrames",
-        "ChatFrame_AddChannel"
+        "ChatFrame_AddChannel",
+        "GUILD"
     ]
 }
