--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,3 @@
-### VS ###
-UIPanelTemplates.xml
-
-## embarassing shit that I do not want in there
-Deprecated
-notes.md
-scrathpad.txt
+Deprecated/ttt.lua
+Deprecated/snippets.lua
+Deprecated2/snippets.lua
