disabled field-inject errors because adhd

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -21,6 +21,9 @@
         "TalentButtonUtil",
         "LE_PARTY_CATEGORY_INSTANCE",
         "toString"
+    ],
+    "Lua.diagnostics.disable": [
+        "inject-field"
     ]
 
 }
