--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -21,6 +21,7 @@
         "TalentButtonUtil",
         "LE_PARTY_CATEGORY_INSTANCE",
         "toString"
-    ]    
+    ],
+    "editor.inlineSuggest.enabled": false
 
 }
