--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -21,7 +21,10 @@
         "TalentButtonUtil",
         "LE_PARTY_CATEGORY_INSTANCE",
         "toString",
-        "PLAYER"
+        "PLAYER",
+        "GetUnitName",
+        "UIParent",
+        "CreateFrame"
     ],
     "editor.inlineSuggest.enabled": false
 
