--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -47,7 +47,151 @@
         "CreateFontStringPool",
         "GridLayoutMixin",
         "DEFAULT_CHAT_FRAME",
-        "ChatFrame1Tab"
+        "ChatFrame1Tab",
+        "MAX_BOSS_FRAMES",
+        "GameTooltipTextRight2",
+        "UIDropDownMenu_Initialize",
+        "ToggleDropDownMenu",
+        "CLOSE",
+        "StaticPopup_Hide",
+        "AutoCompleteBox",
+        "CANCEL",
+        "StaticPopup_Show",
+        "LFGListFrame",
+        "FriendsTooltip",
+        "ChatFrame_AddMessageEventFilter",
+        "ChallengeModeCompleteBanner",
+        "NEWS_ITEM_LOOTED",
+        "NEWS_LEGENDARY_LOOTED",
+        "ButtonFrameTemplate_HidePortrait",
+        "CloseDropDownMenus",
+        "ClubFinderCommunityAndGuildFinderFrame",
+        "StaticPopupDialogs",
+        "StaticPopup_Visible",
+        "TooltipDataProcessor",
+        "FRIENDS_BUTTON_TYPE_BNET",
+        "FRIENDS_BUTTON_TYPE_WOW",
+        "WhoFrame",
+        "ClubFinderGuildFinderFrame",
+        "ItemRefTooltip",
+        "ChallengesFrame",
+        "PVEFrame",
+        "GameTooltip_Hide",
+        "UIParentRightManagedFrameContainer",
+        "ObjectiveTrackerFrame",
+        "AUTOCOMPLETE_FLAG_ALL",
+        "AUTOCOMPLETE_FLAG_NONE",
+        "UIButtonMixin",
+        "ScrollUtil",
+        "SAVE",
+        "DropDownList1",
+        "CommunitiesFrame",
+        "WorldFrame",
+        "LinkUtil",
+        "WHO_LIST_GUILD_FORMAT",
+        "WHO_LIST_FORMAT",
+        "LE_WORLD_ELAPSED_TIMER_TYPE_CHALLENGE_MODE",
+        "ERR_FRIEND_NOT_FOUND",
+        "CreateDataProvider",
+        "CreateScrollBoxListLinearView",
+        "ChatTypeInfo",
+        "ColorPickerFrame",
+        "Settings",
+        "ChatFrame_OpenChat",
+        "GameTooltipTextLeft1",
+        "UIDropDownMenu_CreateInfo",
+        "UIDropDownMenu_AddButton",
+        "BACKDROP_TUTORIAL_16_16",
+        "AutoCompleteEditBox_SetAutoCompleteSource",
+        "AutoComplete_Update",
+        "LFGListFrameDropDown",
+        "GUILD_NEWS",
+        "GUILD_NEWS_TITLE",
+        "ScrollBoxListMixin",
+        "BNET_CLIENT_WOW",
+        "MYTHIC_PLUS_POWER_LEVEL",
+        "NORMAL_FONT_COLOR",
+        "AutoScalingFontStringMixin",
+        "BACKDROP_DIALOG_32_32",
+        "GenerateClosure",
+        "ActionButton_ShowOverlayGlow",
+        "TOOLTIP_DEFAULT_COLOR",
+        "TOOLTIP_DEFAULT_BACKGROUND_COLOR",
+        "COMBATLOGDISABLED",
+        "GameMenuFrame",
+        "ScrollBoxConstants",
+        "COMBATLOGENABLED",
+        "WHISPER_LEADER",
+        "WHISPER",
+        "SettingsPanel",
+        "MYTHIC_PLUS_LEADER_BOARD_NAME_ICON",
+        "ChatEdit_GetActiveWindow",
+        "OpacitySliderFrame",
+        "FONT_COLOR_CODE_CLOSE",
+        "IsSecureCmd",
+        "hash_SlashCmdList",
+        "NOT_BOUND",
+        "NORMAL_FONT_COLOR_CODE",
+        "OKAY",
+        "SetDesaturation",
+        "ACCEPT",
+        "InterfaceOptions_AddCategory",
+        "STATICPOPUP_NUMDIALOGS",
+        "MAX_TALENT_TIERS",
+        "NUM_TALENT_COLUMNS",
+        "UIErrorsFrame",
+        "ICON_TAG_LIST",
+        "CreateObjectPool",
+        "ipairs_reverse",
+        "CombatText_AddMessage",
+        "COMBAT_TEXT_SCROLL_FUNCTION",
+        "NamePlateDriverFrame",
+        "LARGE_NUMBER_SEPERATOR",
+        "SetRaidTargetIcon",
+        "EasyMenu",
+        "HelpPlate_Hide",
+        "HelpPlate_Show",
+        "PanelTemplates_SetDisabledTabState",
+        "HELP_PLATE_BUTTONS",
+        "HelpPlate_IsShowing",
+        "HelpPlateTooltip",
+        "HelpPlate",
+        "MouseIsOver",
+        "SEARCH",
+        "ActionBarActionButtonMixin",
+        "LE_ITEM_BIND_ON_EQUIP",
+        "LE_ITEM_BIND_ON_ACQUIRE",
+        "CLASS_ICON_TCOORDS",
+        "CreateSimpleTextureMarkup",
+        "FindValueInTableIf",
+        "escapePatternSymbols",
+        "ITEM_BNETACCOUNTBOUND",
+        "PLAYER_LIST_DELIMITER",
+        "BIND_TRADE_TIME_REMAINING",
+        "ITEM_SOULBOUND",
+        "ITEM_ACCOUNTBOUND",
+        "LIST_DELIMITER",
+        "INT_SPELL_DURATION_SEC",
+        "INT_SPELL_DURATION_HOURS",
+        "TIME_UNIT_DELIMITER",
+        "INT_SPELL_DURATION_MIN",
+        "GUILD_BANK_LOG_TIME",
+        "LE_EXPANSION_LEVEL_CURRENT",
+        "LE_EXPANSION_WRATH_OF_THE_LICH_KING",
+        "PlayerCastingBarFrame",
+        "CompactUnitFrame_UnregisterEvents",
+        "GetRelativeDifficultyColor",
+        "SetRaidTargetIconTexture",
+        "TextureLoadingGroupMixin",
+        "DefaultCompactNamePlateFrameSetUpOptions",
+        "DefaultCompactNamePlateFriendlyFrameOptions",
+        "DefaultCompactNamePlateEnemyFrameOptions",
+        "INTERRUPTED",
+        "UNIT_LEVEL_TEMPLATE",
+        "UNITNAME_TITLE_GUARDIAN",
+        "THREAT_TOOLTIP",
+        "UNITNAME_TITLE_PET",
+        "UNITNAME_TITLE_MINION"
     ],
     "editor.inlineSuggest.enabled": false
 
