--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -191,7 +191,9 @@
         "UNITNAME_TITLE_GUARDIAN",
         "THREAT_TOOLTIP",
         "UNITNAME_TITLE_PET",
-        "UNITNAME_TITLE_MINION"
+        "UNITNAME_TITLE_MINION",
+        "MinimapCluster",
+        "SetUIPanelAttribute"
     ],
     "editor.inlineSuggest.enabled": false
 
